FIX: nav wrap

--- a/docsite/index.css
+++ b/docsite/index.css
@@ -109,7 +109,7 @@ nav {
   }
 
   & > a[href="#getting-started"] {
-    @media (--xs-n-below) {
+    @media (--sm-n-below) {
       display: none;
     }
   }
